[gd_scene load_steps=2 format=3 uid="uid://bpj6hsaurwpqq"]

[ext_resource type="Script" uid="uid://dopuggnkcf0dx" path="res://Scripts/UI/event_dialog.gd" id="1_xusqx"]

[node name="EventDialog" type="CanvasLayer"]
script = ExtResource("1_xusqx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="ColorRect/Panel/VBoxContainer"]
layout_mode = 2
